--- a/examples/cli/README
+++ b/examples/cli/README
@@ -3,4 +3,8 @@ This example shows how to use solar via CLI.
 Usage
 =====
 
+Run
+
 `bash ./example.sh`
+
+after this you can run `solar orch report last` and wait until all tasks have status SUCCESS.
