--- a/examples/librarian/README
+++ b/examples/librarian/README
@@ -5,7 +5,7 @@ Run it from /vagrant dir:
 
 ```
 solar resource clear_all
-solar resource create nodes templates/nodes.yaml '{"count": 1}'
+solar resource create nodes templates/nodes '{"count": 1}'
 solar resource create librarian_example examples/librarian/librarian.yaml '{"node": "node1"}'
 
 solar changes stage
